--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Hello username</title>
+<style>
+    body {
+        background-color:#ccc;
+        font-family:arial;
+    }
+    h1 {
+        display:block;
+        position:absolute;
+        left:50%;
+        top:50%;
+        line-height:20px;
+        font-size:16px;
+        color:#000;
+        margin-top:-10px;
+        margin-left:-20px;
+    }
+</style>
+</head>
 <h1>Hello username.. ;)</h1>
