--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         top:50%;
         line-height:20px;
         font-size:16px;
-        color:#000;
+        color:#fff;
         margin-top:-10px;
-        margin-left:-20px;
+        margin-left:-100px;
+        text-align:center;
+        width:200px;
     }
 </style>
 </head>
